@@ -42,7 +42,7 @@ public:
     virtual const ClassInfo *classInfo() const;
     static const ClassInfo info;
 
-    virtual bool implementsCall() const;
+    virtual CallType getCallData(CallData&);
 
     virtual void getPropertyNames(ExecState*, PropertyNameArray&);
 
